--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGO_URL="mongodb://localhost:27017"
 DB_NAME="analytics_platform"
-CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+CORS_ORIGINS=*
 JWT_SECRET=your-secret-key-change-in-production
