--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="analytics_platform"
+MONGODB_URI=mongodb+srv://avaptanisha_db_user:w1L0FhmNHZI8OytP@intellica.cdzld3b.mongodb.net/analyticsdb?retryWrites=true&w=majority&appName=intellica
+DB_NAME=analyticsdb
 CORS_ORIGINS=*
 JWT_SECRET=your-secret-key-change-in-production
