--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://avaptanisha_db_user:w1L0FhmNHZI8OytP@intellica.cdzld3b.mongodb.net/analyticsdb?retryWrites=true&w=majority&appName=intellica
+MONGODB_URI=mongodb+srv://avaptanisha_db_user:w1L0FhmNHZI8OytP@SignalVista.cdzld3b.mongodb.net/analyticsdb?retryWrites=true&w=majority&appName=SignalVista
 DB_NAME=analyticsdb
 CORS_ORIGINS=*
 JWT_SECRET=your-secret-key-change-in-production
